--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
 		"webpack-dev-server": "^5.2.0"
 	},
 	"dependencies": {
+		"@reown/appkit": "^1.7.3",
+		"@reown/appkit-adapter-solana": "^1.7.3",
 		"@solana-mobile/mobile-wallet-adapter-protocol": "^2.1.5",
 		"@solana-mobile/mobile-wallet-adapter-protocol-web3js": "^2.1.5",
 		"@solana-mobile/wallet-adapter-mobile": "^2.1.5",
