--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
 		"@babel/core": "^7.26.9",
 		"@babel/preset-env": "^7.26.9",
 		"babel-loader": "^9.2.1",
-		"buffer": "^6.0.3",
 		"webpack": "^5.98.0",
 		"webpack-cli": "^6.0.1",
 		"webpack-dev-server": "^5.2.0"
@@ -22,21 +21,12 @@
 	"dependencies": {
 		"@reown/appkit": "^1.7.3",
 		"@reown/appkit-adapter-solana": "^1.7.3",
-		"@solana-mobile/mobile-wallet-adapter-protocol": "^2.1.5",
-		"@solana-mobile/mobile-wallet-adapter-protocol-web3js": "^2.1.5",
-		"@solana-mobile/wallet-adapter-mobile": "^2.1.5",
-		"@solana/wallet-adapter-base": "^0.9.23",
-		"@solana/wallet-adapter-walletconnect": "^0.1.17",
-		"@solana/wallet-adapter-wallets": "^0.19.33",
-		"@solana/wallet-standard-wallet-adapter-base": "^1.1.4",
 		"@solana/web3.js": "^1.98.0",
-		"@types/telegram-web-app": "^7.10.1",
-		"@wagmi/core": "^2.16.7",
-		"@wallet-standard/core": "^1.1.0",
-		"@walletconnect/client": "^1.8.0",
-		"bs58": "^6.0.0",
-		"react-native-quick-base64": "^2.1.2",
-		"solana-connect": "^0.1.10",
-		"viem": "^2.27.2"
+		"buffer": "^6.0.3",
+		"crypto-browserify": "^3.12.1",
+		"react": "^19.1.1",
+		"react-dom": "^19.1.1",
+		"stream-browserify": "^3.0.0",
+		"tweetnacl": "^1.0.3"
 	}
 }
